Atualização swagger
Descrição dos endpoints em seus arquivos nas rotas
