# backend/swagger_output.json
@@ -2,36 +2,106 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "PORTFEED API",
+    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "localhost:3001",
   "basePath": "/",
-  "tags": [],
+  "tags": [
+    {
+      "name": "Login",
+      "description": "Endpoint"
+    }
+  ],
   "schemes": [
     "http"
   ],
-  "consumes": [],
-  "produces": [],
+  "securityDefinitions": {
+    "api_key": {
+      "type": "apiKey",
+      "name": "api_key",
+      "in": "header"
+    },
+    "portfeed_auth": {
+      "type": "oauth2",
+      "authorizationUrl": "https://petstore.swagger.io/oauth/authorize",
+      "flow": "implicit",
+      "scopes": {
+        "read_pets": "read your pets",
+        "write_pets": "modify pets in your account"
+      }
+    }
+  },
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
+  ],
   "paths": {
     "/": {
       "get": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "Projeto"
+        ],
+        "description": "Endpoint para obter um projeto.",
         "produces": [
           "application/json"
         ],
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "name": "id",
+            "description": "Projetos de usuários.",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "filtro",
+            "description": "Um filtro qualquer.",
+            "type": "string",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Projeto"
+            },
+            "description": "Projeto encontrado."
+          },
+          "404": {
+            "schema": {
+              "$ref": "#/definitions/Projeto"
+            },
+            "description": "Projeto não encontrado."
+          }
+        }
       },
       "post": {
-        "tags": [],
-        "description": "",
+        "tags": [
+          "Projeto"
+        ],
+        "description": "Endpoint para adicionar um projeto.",
         "produces": [
           "application/json"
         ],
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "name": "newProject",
+            "in": "body",
+            "description": "Informações do projeto.",
+            "required": true,
+            "type": "object",
+            "schema": {
+              "$ref": "#/definitions/AddProjeto"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Projeto registrado com sucesso!"
+          }
+        }
       },
       "options": {
         "tags": [],
@@ -71,7 +141,9 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "erro": {}
+        }
       },
       "delete": {
         "tags": [],
@@ -91,5 +163,36 @@
       }
     }
   },
-  "definitions": {}
+  "definitions": {
+    "Login": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string",
+          "example": "admin"
+        },
+        "password": {
+          "type": "string",
+          "example": "123456"
+        }
+      }
+    },
+    "AddUser": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string",
+          "example": "admin"
+        },
+        "password": {
+          "type": "string",
+          "example": "123456"
+        }
+      },
+      "required": [
+        "username",
+        "password"
+      ]
+    }
+  }
 }
